# talentme-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  REFERENCE_ARCHITECTURE.md  pyproject.toml  setup.sh  test_init.py  test_learn.py  test_setup.py
docs/: DEVELOPMENT_MASTER_LIST.md  README.md  README_zh.md
docs/en/: DEVELOPMENT_MASTER_LIST.md
docs/en/skills/: tm-articulate.md  tm-assess.md  tm-brief-for-expert.md  tm-coaching-capture.md  tm-contradiction.md  tm-cross-linker.md  tm-debrief.md  tm-guide.md  tm-history-learn.md  tm-import-review.md  tm-insight.md  tm-merge.md  tm-mock.md  tm-offer.md  tm-plan.md  tm-prep.md  tm-provenance.md  tm-question.md  tm-resume.md  tm-review.md  tm-session-save.md  tm-summary.md  tm-tag-taxonomy.md
docs/en/tools/: assess.md  calendar_sync.md  edit.md  guide.md  (+9 more)
docs/skills/: tm-articulate.md  tm-assess.md  tm-brief-for-expert.md  tm-coaching-capture.md  tm-contradiction.md  tm-cross-linker.md  tm-debrief.md  tm-guide.md  tm-history-learn.md  tm-import-review.md  tm-insight.md  tm-merge.md  tm-offer.md  tm-plan.md  tm-prep.md  tm-provenance.md  tm-question.md  tm-resume.md  tm-review.md  tm-session-save.md  tm-summary.md  tm-tag-taxonomy.md
docs/tools/: assess.md  edit.md  guide.md  interview.md  learn.md  lint.md  rebuild_wiki_graph.md  report_issue.md  review.md  search.md  status.md
src/talentme_mcp/: cli.py  server.py
test_workspace/: .cursorrules  AGENTS.md  CLAUDE.md  GEMINI.md
test_workspace/.github/: copilot-instructions.md
test_workspace/mock_memory/: knowledge_point_template.md  memory.db  template.json
(+82 files in other folders)
