[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "talentme-mcp"
version = "0.1.0"
description = "TalentMe MCP Server for ML Interview Prep"
authors = [
    {name = "Suiyao", email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.2.0",
    "click",
    "fastapi",
    "uvicorn",
    "requests"
]

[project.scripts]
talentme = "talentme_mcp.cli:main"
